--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,17 @@
 {
   "dependencies": {
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
   },
   "name": "backend",
   "version": "1.0.0",
   "description": "backend for sweet-shop-management-system",
-  "main": "app.js",
-  "devDependencies": {},
+  "main": "src/app.js",
   "scripts": {
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js",
     "test": "cross-env NODE_ENV=test jest"
   },
   "author": "Shreyash Purushottam Ghanekar, shreyasghanekar35@gmail.com",
