--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,10 @@
 {
+    "devDependencies": {
+    "cross-env": "^10.0.0",
+    "jest": "^30.0.5",
+    "mongodb-memory-server": "^10.1.4",
+    "supertest": "^7.1.4"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
