--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "description": "backend for sweet-shop-management-system",
   "main": "src/app.js",
   "scripts": {
+    "build": "echo \"Error: Started build !!\"",
     "dev": "nodemon src/app.js",
     "start": "node src/app.js",
     "test": "cross-env NODE_ENV=test jest"
